--- a/nginx-laravel.conf
+++ b/nginx-laravel.conf
@@ -11,7 +11,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock; # Gebruik Unix-socket
+        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
